testdata/baselines/reference/submodule/compiler/arrayToLocaleStringES2015.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
arrayToLocaleStringES2015.ts(3,11): error TS2339: Property 'toLocaleString' does not exist on type '{}'.
arrayToLocaleStringES2015.ts(4,11): error TS2339: Property 'toLocaleString' does not exist on type '{}'.
arrayToLocaleStringES2015.ts(5,11): error TS2339: Property 'toLocaleString' does not exist on type '{}'.
arrayToLocaleStringES2015.ts(7,23): error TS2304: Cannot find name 'Date'.
arrayToLocaleStringES2015.ts(7,37): error TS2552: Cannot find name 'Date'. Did you mean 'dates'?
arrayToLocaleStringES2015.ts(7,49): error TS2304: Cannot find name 'Date'.
arrayToLocaleStringES2015.ts(8,13): error TS2339: Property 'toLocaleString' does not exist on type '{}'.
arrayToLocaleStringES2015.ts(9,13): error TS2339: Property 'toLocaleString' does not exist on type '{}'.
arrayToLocaleStringES2015.ts(10,13): error TS2339: Property 'toLocaleString' does not exist on type '{}'.
arrayToLocaleStringES2015.ts(12,23): error TS2304: Cannot find name 'Date'.
arrayToLocaleStringES2015.ts(12,42): error TS2304: Cannot find name 'Date'.
arrayToLocaleStringES2015.ts(13,13): error TS2339: Property 'toLocaleString' does not exist on type '{}'.
arrayToLocaleStringES2015.ts(14,13): error TS2339: Property 'toLocaleString' does not exist on type '{}'.
arrayToLocaleStringES2015.ts(15,13): error TS2339: Property 'toLocaleString' does not exist on type '{}'.
arrayToLocaleStringES2015.ts(16,17): error TS2304: Cannot find name 'ReadonlyArray'.
arrayToLocaleStringES2015.ts(16,40): error TS2304: Cannot find name 'Date'.
arrayToLocaleStringES2015.ts(18,23): error TS2304: Cannot find name 'Int8Array'.
arrayToLocaleStringES2015.ts(23,24): error TS2304: Cannot find name 'Uint8Array'.
arrayToLocaleStringES2015.ts(28,31): error TS2304: Cannot find name 'Uint8ClampedArray'.
arrayToLocaleStringES2015.ts(33,24): error TS2304: Cannot find name 'Int16Array'.
arrayToLocaleStringES2015.ts(38,25): error TS2304: Cannot find name 'Uint16Array'.
arrayToLocaleStringES2015.ts(43,24): error TS2304: Cannot find name 'Int32Array'.
arrayToLocaleStringES2015.ts(48,25): error TS2304: Cannot find name 'Uint32Array'.
arrayToLocaleStringES2015.ts(53,26): error TS2304: Cannot find name 'Float32Array'.
arrayToLocaleStringES2015.ts(58,26): error TS2304: Cannot find name 'Float64Array'.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== arrayToLocaleStringES2015.ts (25 errors) ====
    let str: string;
    const arr = [1, 2, 3];
    str = arr.toLocaleString(); // OK
              ~~~~~~~~~~~~~~
!!! error TS2339: Property 'toLocaleString' does not exist on type '{}'.
    str = arr.toLocaleString('en-US'); // OK
              ~~~~~~~~~~~~~~
!!! error TS2339: Property 'toLocaleString' does not exist on type '{}'.
    str = arr.toLocaleString('en-US', { style: 'currency', currency: 'EUR' }); // OK
              ~~~~~~~~~~~~~~
!!! error TS2339: Property 'toLocaleString' does not exist on type '{}'.
    
    const dates: readonly Date[] = [new Date(), new Date()];
                          ~~~~
!!! error TS2304: Cannot find name 'Date'.
                                        ~~~~
!!! error TS2552: Cannot find name 'Date'. Did you mean 'dates'?
!!! related TS2728 arrayToLocaleStringES2015.ts:7:7: 'dates' is declared here.
                                                    ~~~~
!!! error TS2304: Cannot find name 'Date'.
    str = dates.toLocaleString(); // OK
                ~~~~~~~~~~~~~~
!!! error TS2339: Property 'toLocaleString' does not exist on type '{}'.
    str = dates.toLocaleString('fr'); // OK
                ~~~~~~~~~~~~~~
!!! error TS2339: Property 'toLocaleString' does not exist on type '{}'.
    str = dates.toLocaleString('fr', { timeZone: 'UTC' }); // OK
                ~~~~~~~~~~~~~~
!!! error TS2339: Property 'toLocaleString' does not exist on type '{}'.
    
    const mixed = [1, new Date(), 59782, new Date()];
                          ~~~~
!!! error TS2304: Cannot find name 'Date'.
                                             ~~~~
!!! error TS2304: Cannot find name 'Date'.
    str = mixed.toLocaleString(); // OK
                ~~~~~~~~~~~~~~
!!! error TS2339: Property 'toLocaleString' does not exist on type '{}'.
    str = mixed.toLocaleString('fr'); // OK
                ~~~~~~~~~~~~~~
!!! error TS2339: Property 'toLocaleString' does not exist on type '{}'.
    str = mixed.toLocaleString('de', { style: 'currency', currency: 'EUR' }); // OK
                ~~~~~~~~~~~~~~
!!! error TS2339: Property 'toLocaleString' does not exist on type '{}'.
    str = (mixed as ReadonlyArray<number | Date>).toLocaleString('de', { currency: 'EUR', style: 'currency', timeZone: 'UTC' }); // OK
                    ~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'ReadonlyArray'.
                                           ~~~~
!!! error TS2304: Cannot find name 'Date'.
    
    const int8Array = new Int8Array(3);
                          ~~~~~~~~~
!!! error TS2304: Cannot find name 'Int8Array'.
    str = int8Array.toLocaleString(); // OK
    str = int8Array.toLocaleString('en-US'); // OK
    str = int8Array.toLocaleString('en-US', { style: 'currency', currency: 'EUR' }); // OK
    
    const uint8Array = new Uint8Array(3);
                           ~~~~~~~~~~
!!! error TS2304: Cannot find name 'Uint8Array'.
    str = uint8Array.toLocaleString(); // OK
    str = uint8Array.toLocaleString('en-US'); // OK
    str = uint8Array.toLocaleString('en-US', { style: 'currency', currency: 'EUR' }); // OK
    
    const uint8ClampedArray = new Uint8ClampedArray(3);
                                  ~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'Uint8ClampedArray'.
    str = uint8ClampedArray.toLocaleString(); // OK
    str = uint8ClampedArray.toLocaleString('en-US'); // OK
    str = uint8ClampedArray.toLocaleString('en-US', { style: 'currency', currency: 'EUR' }); // OK
    
    const int16Array = new Int16Array(3);
                           ~~~~~~~~~~
!!! error TS2304: Cannot find name 'Int16Array'.
    str = int16Array.toLocaleString(); // OK
    str = int16Array.toLocaleString('en-US'); // OK
    str = int16Array.toLocaleString('en-US', { style: 'currency', currency: 'EUR' }); // OK
    
    const uint16Array = new Uint16Array(3);
                            ~~~~~~~~~~~
!!! error TS2304: Cannot find name 'Uint16Array'.
    str = uint16Array.toLocaleString(); // OK
    str = uint16Array.toLocaleString('en-US'); // OK
    str = uint16Array.toLocaleString('en-US', { style: 'currency', currency: 'EUR' }); // OK
    
    const int32Array = new Int32Array(3);
                           ~~~~~~~~~~
!!! error TS2304: Cannot find name 'Int32Array'.
    str = int32Array.toLocaleString(); // OK
    str = int32Array.toLocaleString('en-US'); // OK
    str = int32Array.toLocaleString('en-US', { style: 'currency', currency: 'EUR' }); // OK
    
    const uint32Array = new Uint32Array(3);
                            ~~~~~~~~~~~
!!! error TS2304: Cannot find name 'Uint32Array'.
    str = uint32Array.toLocaleString(); // OK
    str = uint32Array.toLocaleString('en-US'); // OK
    str = uint32Array.toLocaleString('en-US', { style: 'currency', currency: 'EUR' }); // OK
    
    const float32Array = new Float32Array(3);
                             ~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'Float32Array'.
    str = float32Array.toLocaleString(); // OK
    str = float32Array.toLocaleString('en-US'); // OK
    str = float32Array.toLocaleString('en-US', { style: 'currency', currency: 'EUR' }); // OK
    
    const float64Array = new Float64Array(3);
                             ~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'Float64Array'.
    str = float64Array.toLocaleString(); // OK
    str = float64Array.toLocaleString('en-US'); // OK
    str = float64Array.toLocaleString('en-US', { style: 'currency', currency: 'EUR' }); // OK
    